<resources>
    <string name="app_name">GetFame</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="what_s_your_name">What\'s your name ?</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="when_s_your_birthday">When\'s your Birthday ?</string>
    <string name="mail_for_everything">Mail for Everything</string>
    <string name="what_s_your_number">What\'s your Number ?</string>
    <string name="phone_number">Phone number</string>
    <string name="password_for_security">Password For Security</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="photos">Photos</string>
    <string name="camera">Camera</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="close_camera">Close Camera</string>
    <string name="flash">Flash</string>
    <string name="image_capture">Image Capture</string>
    <string name="touch">Touch</string>
    <string name="add_images">Add Images</string>
    <string name="flip_cameras">Flip Cameras</string>
    <string name="camera_image">Camera Image</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="add_friends">Add Friends</string>
    <string name="search">Search</string>
    <string name="account_name">Account name</string>
    <string name="your_email">Your Email</string>
    <string name="profile">profile</string>
    <string name="your_photos">Your Photos</string>
    <string name="my_photos">My Photos</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="account_email">Account Email</string>
    <string name="add">Add</string>
    <string name="get_fame">Get Fame</string>
    <string name="pending">Pending</string>
    <string name="sent">Sent</string>
    <string name="accept">Accept</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="sent_requests">Sent Requests</string>
    <string name="cancel">Cancel</string>
    <string name="friends">Friends</string>
    <string name="actual_photo">Actual Photo</string>
    <string name="like">Like</string>
</resources>