<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<ImageView
    android:id="@+id/search_profile_pic"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:src="@drawable/rohit"
    android:layout_margin="10dp"
    android:contentDescription="@string/user_profile_picture" />
<TextView
    android:id="@+id/search_user_name"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:text="@string/account_name"
    android:textSize="16sp"
    android:layout_toEndOf="@id/search_profile_pic"
    android:layout_marginTop="30dp"
    android:layout_marginStart="10dp"
    />
<TextView
   android:id="@+id/search_email"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:text="@string/account_email"
    android:textSize="14sp"
    android:layout_toEndOf="@id/search_profile_pic"
    android:layout_below="@id/search_user_name"
    android:layout_marginStart="10dp"
    android:layout_marginTop="1dp"
    />
<Button
    android:id="@+id/search_add"
    android:layout_width="80dp"
    android:layout_height="40dp"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="20dp"
    android:layout_centerVertical="true"
    android:text="@string/add"
    android:gravity="center"
    android:textColor="@color/white"
    android:textAllCaps="false"
    android:textSize="12sp"
    android:background="@drawable/button_style"
    />

</RelativeLayout>