<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.PasswordFragment">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/password_for_security"
    android:layout_gravity="center"
    android:layout_marginTop="100dp"
    android:textSize="20sp"/>
<EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:importantForAutofill="no"/>
<Button
    android:id="@+id/register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/button_style"
    android:text="@string/register"
    android:textSize="16sp"
    android:textColor="@color/white"
    android:textAllCaps="false"
    android:layout_gravity="center"
    android:layout_marginTop="100dp"/>

</LinearLayout>