<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/friends_profile_pic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/rohit"
        android:layout_margin="10dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/profile" />
    <TextView
        android:id="@+id/friends_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_s_your_name"
        android:layout_toEndOf="@id/friends_profile_pic"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/friends_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_for_everything"
        android:layout_toEndOf="@id/friends_profile_pic"
        android:layout_below="@id/friends_name"
        android:layout_marginStart="20dp"
        android:textSize="12sp"
        />
</RelativeLayout>