<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.CameraImageDisplay">
    <ImageView
        android:id="@+id/display_camera_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/camera_image"
        android:scaleType="centerCrop"
        />
    <ImageView
        android:id="@+id/clear_image"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/clear"
        android:contentDescription="@string/clear" />
    <Button
        android:id="@+id/save_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@drawable/button_style"/>
</RelativeLayout>